--- a/views/simpleCourse/tab3.html
+++ b/views/simpleCourse/tab3.html
@@ -22,13 +22,16 @@
                         {{x.content_name}}
                     </td>
                     <td>
-                        <strong>Google</strong>
+                        <strong>Pendiente</strong>
                     </td>
                     <td>
                         <a href="visual-recursos.html" class="btn btn-gosh btn-xsm btn-gosh--verde pull-right text--upper">
                             Descargar
                         </a>
                     </td>
+                </tr>
+                <tr>
+                    <div class="alert alert-warning alertContent" style="display:none;">No hay información</div>
                 </tr>
             </table>
 
