--- a/views/simpleCourse/tab5.html
+++ b/views/simpleCourse/tab5.html
@@ -21,68 +21,21 @@
                         Acción
                     </th>
                 </tr>
-                <tr>
+                <tr ng-repeat="item in evaluations" ng-if="item.length > 0">
                     <td>
-                        Evaluación 1: Introducción al Marketing Digital
+                        {{item[0].content_name}}
                     </td>
                     <td class="text-center">
-                        <strong>1/3</strong>
+                        <strong>{{item[0].content_button_info.attempts_left}} / {{item[0].content_button_info.num_attempts}}</strong>
                     </td>
                     <td  class="text-center">
-                        <strong>78% (Bien)</strong>
+                        <strong>{{item[0].content_button_info.exam_score}}</strong>
                     </td>
                     <td>
-                        <a class="btn btn-gosh btn-xsm btn-gosh--verde pull-right text--upper typeform-share" href="https://andresescobar.typeform.com/to/emTKCV" data-mode="1" target="_blank">
+                        <a class="btn btn-gosh btn-xsm btn-gosh--verde pull-right text--upper typeform-share" ng-href="{{item[0].file_url}}">
                             Hacer Evaluación
                         </a>
                     </td>
                 </tr>
-                <tr>
-                    <td>
-                        Evaluación 2: Consumidor Digital y ZMOT
-                    </td>
-                    <td class="text-center">
-                        <strong>2/3</strong>
-                    </td>
-                    <td class="text-center">
-                        <strong>58% (Regular)</strong>
-                    </td>
-                    <td>
-                        <a class="btn btn-gosh btn-xsm btn-gosh--verde pull-right text--upper typeform-share" href="https://andresescobar.typeform.com/to/emTKCV" data-mode="1" target="_blank">
-                            Hacer Evaluación
-                        </a>
-                    </td>
-                </tr>
-                <tr>
-                    <td>
-                        Evaluación 3: KPIs del Marketing Digital
-                    </td>
-                    <td class="text-center">
-                        <strong>3/3</strong>
-                    </td>
-                    <td class="text-center">
-                        <strong>Pendiente</strong>
-                    </td>
-                    <td>
-                        <a class="btn btn-gosh btn-xsm btn-gosh--verde pull-right text--upper typeform-share" href="https://andresescobar.typeform.com/to/emTKCV" data-mode="1" target="_blank">
-                            Hacer Evaluación
-                        </a>
-                    </td>
-                </tr>
-                <tr>
-                    <td>
-                        Evaluación 4: Estrategia Digital en Negocios B2B
-                    </td>
-                    <td class="text-center">
-                        <strong>3/3</strong>
-                    </td>
-                    <td class="text-center">
-                        <strong>Pendiente</strong>
-                    </td>
-                    <td>
-
-                    </td>
-                </tr>
-
             </table>
         </div>
