--- a/views/simpleCourse/tab6.html
+++ b/views/simpleCourse/tab6.html
@@ -1,25 +1,25 @@
   <!-- CONTENIDO TABS PROFESORES -->
 
-        <div id="profesores">
+        <div id="profesores" ng-controller="tutors">
             <h3 class="text text--lite text--xlg margin--t1 text--gris_osc text--xbold">
                 Profesores:
             </h3>
 
-            <div class="row">
+            <div class="row" ng-repeat="tutor in tutorsData">
                 <div class="col-xs-2 vertical-middle">
-                    <img src="images/avatar.jpg" alt="" class="img-circle sidebar-imageCurso__image img-responsive">
+                    <img ng-src="{{tutor.avatar}}" alt="" class="img-circle sidebar-imageCurso__image img-responsive">
                 </div>
                 <div class="col-xs-10 vertical-middle">
                     <p class="text text--azul text--xbold text--md margin--t05 margin--b0">
-                        Andrés Escobar
+                        {{tutor.first_name}} {{tutor.last_name}} 
                     </p>
                     <p class="text text--gris text--sm margin--t0">
-                        CEO Existaya.com Agencia Digital, Empresario y Profesor Universitario.
+                        {{tutor.jobtitle}}
                     </p>
                 </div>
                 <div class="col-xs-12">
                     <p class="text text--gris text--lite">
-                        Ingeniero de Sistemas con énfasis en administración e informática, Director General de Existaya.com Agencia Digital, Google Advertising Professional (GAP).  Google Analytics Individual Qualification (IQ). Docente en Marketing Online y Programación Web en la Universidad ICESI. Conferencista y Consultor con más de 8 años de experiencia en Marketing Online, Miembro de IAB Colombia (Internet Advertising Bureau).
+                        {{tutor.about}}
                     </p>
                 </div>
             </div>
