--- a/views/login.html
+++ b/views/login.html
@@ -115,11 +115,11 @@
                                 </div>
                             </div>
                             <div class="col-xs-12 sidebar-imageCurso__qualy">
-                                <span class="icon-star"></span>
-                                <span class="icon-star"></span>
-                                <span class="icon-star"></span>
-                                <span class="icon-star"></span>
-                                <span class="icon-star"></span>
+                                <span class="fa-star"></span>
+                                <span class="fa-star"></span>
+                                <span class="fa-star"></span>
+                                <span class="fa-star"></span>
+                                <span class="fa-star"></span>
                             </div>
                         </div>
                         <h3 class="text text--gris text--md text--bold margin--t2">
@@ -129,7 +129,7 @@
                         
                         </p>
                         <p class="text text--azul_cla text--lite margin--t1">
-                            <span class="icon-time"></span><span ng-if="coursePublic.duration != null"> {{coursePublic.duration}} Horas</span><span ng-if="coursePublic.duration == null"> No hay un tiempo de duración asignado al curso.</span>
+                            <span class="fa fa-clock-o"></span><span ng-if="coursePublic.duration != null"> {{coursePublic.duration}} Horas</span><span ng-if="coursePublic.duration == null"> No hay un tiempo de duración asignado al curso.</span>
                         </p>
                         <a  ng-href="#course/{{coursePublic.uuid}}/details" class="btn btn-gosh btn-gosh--gris btn-lg margin--t05" ng-click="scrolltop()"> MÁS INFORMACIÓN </a>
                     </div>
