--- a/views/courses/courseContents.html
+++ b/views/courses/courseContents.html
@@ -11,9 +11,9 @@
                                 <li ng-repeat="module in packModules" role="presentation" ng-class="{ active:$first}">
                                     
                                     <a pk="{{module.module_pk}}"  aria-controls="{{module.module_name}}" role="tab" data-toggle="pill" ng-click="jumpModulePosition($index)">
-                                        {{module.module_name}}
+                                        {{module.module_name | words:7 }}
                                         <br>
-                                        <span>{{dataSimpleCourse.course.name}}</span>
+                                        <span>{{dataSimpleCourse.course.name | lowercase}}</span>
                                     </a>
                                 </li>
                             </ul>
