--- a/css/main.css
+++ b/css/main.css
@@ -538,7 +538,7 @@ body{font-family:'Raleway',sans-serif;font-size:16px;margin:0;overflow-x:hidden;
 .sidebar-leftBlock{background:#f6f6f6;margin-top:1em;padding-top:2em;padding-bottom:2em}
 .sidebar-detalleContenidoCurso{background:#fcfcfc;padding-bottom:2em;padding-top:2em}
 .sidebar-contenidoCurso{background:#f5f5f5;padding-bottom:4em}
-.sidebar-right{background:#eee;padding-bottom:2em;}
+.sidebar-right{background:#eee;padding-bottom:2em;padding-top: 2em; height:420px;}
 .sidebar-nextPreview{padding-top:1em;padding-bottom:1em;padding-right:3em;margin-top:1em;}
 .sidebar-nextPreview__btnNext{position:absolute;top:50%;right:.5em;margin-top:-1.2em}
 .sidebar-contentMenu{overflow-x:hidden;}
@@ -809,7 +809,7 @@ body{font-family:'Raleway',sans-serif;font-size:16px;margin:0;overflow-x:hidden;
 
 .descriptionSmall { color: #929292; font-size: 0.85em; font-weight: 300;}
 
-iframe {height:370px !important; width:100% !important;}
+iframe {height:420px !important; width:100% !important;}
 
 .carousel-indicators {display:none !important;}
 
@@ -840,3 +840,21 @@ a{
 .panel-group--detalleCertificaciones .panel-heading > a > span {background: #6e8e2d; border-radius: 50%; color: #FFF; font-size: 1em; font-weight: 800; height: 2.5em; position: absolute; padding-top: .5em; top: 50%; text-align: center; left: 1em; margin-top: -1.25em; width: 2.5em;}
 .panel-group--detalleCertificaciones .panel-heading > a.active > span {background: #FFF; color: #3874b8; }
 .sidebar-table2 {background: #ebfcf8; padding-bottom: 0em; padding-top: 2em; margin-top: 2em; margin-bottom: 2em; }
+#tabsLecciones .carousel-inner {overflow: visible;}
+
+
+.bg-modal{background: rgba(11, 11, 11, 0.61); position: absolute; width: 100%; min-height: 100%; height: 1180px; z-index: 999;padding: 5%;}
+.container-quest {background: #FFF; padding:20px 10px; box-shadow: 5px 5px 5px rgba(0, 0, 0, 0.43); font-size: 1.2em;}
+.numberQuestion {background: #4fb0ae; padding: 13px; border-radius: 50%; padding-bottom: 5px; padding-top: 1px;font-size: 1.4em; color: #FFF;}
+.optionBg{ background: #F8F8F8; border: 1px solid #ccc; padding: 10px; margin: 5px 0;border-radius: 5px;}
+.containerFilds{margin: 50px 0;}
+.letter {background: #F8F8F8; padding: 5px 10px; border: 1px solid #ccc; border-radius: 5px;}
+.letter:hover {background: #EFEEEE; cursor:pointer;}
+.labelField {color: #4fb0ae ;}
+.navQuestion {background: #EEE; height: 60px; width: 100%; position: relative; bottom: 50px; margin-top: 40px;}
+.navButtons a {background: #4fb0ae; padding: 10px 15px; border-radius: 7px; color:#FFF; float:right;margin: 10px 2px;}
+.navButtons a:hover {background: #9ACDCC;}
+.avanced {padding-top: 10px;}
+.avanced .progress-bar {background:#4fb0ae;}
+.avanced .progress {height:10px;}
+.forum-header {color: #777; background:#F5F5F5;}
