--- a/views/courses/courseContents.html
+++ b/views/courses/courseContents.html
@@ -10,8 +10,8 @@
                             <ul class="nav nav-tabs nav-justified nav-tabs--detalleClase" role="tablist">
                                 <li ng-repeat="module in packModules" role="presentation" ng-class="{ active:$first}">
                                     
-                                    <a pk="{{module.module_pk}}"  aria-controls="{{module.module_name}}" role="tab" data-toggle="pill" ng-click="jumpModulePosition($index)">
-                                        {{module.module_name | words:7 }}
+                                    <a tooltip="{{module.module_name}}" tooltip-placement="top" pk="{{module.module_pk}}"  aria-controls="{{module.module_name}}" role="tab" data-toggle="pill" ng-click="jumpModulePosition($index)">
+                                        {{module.module_name | words:4 }}
                                         <br>
                                         <span>{{dataSimpleCourse.course.name | lowercase}}</span>
                                     </a>
