--- a/views/courses/courseContents.html
+++ b/views/courses/courseContents.html
@@ -102,7 +102,7 @@
                                 80  
                             </p>
                             <div class="clearfix"></div>
-                                <a class="btn btn-verde btn-lg margin--t1" href="{{exam_url}}" ng-disabled="is_disabled()" data-mode="1" target="_blank" target="_blank">
+                                <a class="btn btn-verde btn-lg margin--t1" ng-disabled="is_disabled()" data-mode="1" target="_blank" ng-click="open_test()">
                                     Realizar Evaluación
                                 </a>
                                 <script>
@@ -130,5 +130,16 @@
                 </div>
             </div>
         </div>
+    </div>
+</div>
+<div ng-show="show_test">
+    <div id="background_gray">
+        <a class="pull-right">
+            <img src="https://s3-eu-west-1.amazonaws.com/share.typeform.com/close.gif"  ng-click="close_test()">
+        </a>
+    </div>
+
+    <div id="typeform-wrapper" class="popup show" style="">
+        <div ng-include="template"></div>
     </div>
 </div>
