--- a/views/profile.html
+++ b/views/profile.html
@@ -237,7 +237,7 @@
                                     </h2>
                                 </div>
                                 <div class="col-xs-4">
-                                    <img src="images/xResources.jpg" height="413" width="720" alt="" class="img-responsive pull-left" pagespeed_url_hash="2068656069" onload="pagespeed.CriticalImages.checkImageForCriticality(this);">
+                                    <img src="images/xResources.jpg" height="413" width="720" alt="" class="img-responsive pull-left">
                                 </div>
                                 <div class="col-xs-8">
                                     <p class="text text--lite text--gris">
