--- a/views/simpleCourse/tab4.html
+++ b/views/simpleCourse/tab4.html
@@ -11,13 +11,13 @@
     			<li class="col-md-5">
     				<strong><i class="fa fa-commenting-o"></i> Temas de Discusión</strong>
     			</li>
-    			<li class="col-md-2">
+    			<li class="col-md-2 text-center">
     				<strong><i class="fa fa-users"></i> Participantes</strong>
     			</li>
-    			<li class="col-md-2">
+    			<li class="col-md-2 text-center">
     				<strong><i class="fa fa-user-plus"></i> Comentarios</strong>
     			</li>
-    			<li class="col-md-3">
+    			<li class="col-md-3 text-center">
     				<strong><i class="fa fa-info-circle"></i> Detalles</strong>
     			</li>
     		</ul>
@@ -25,9 +25,66 @@
     	<li class="list-group-item" ng-repeat="items in tribesDetails.topics">
     		<ul class="row list-unstyled">
     			<li class="col-md-5" id="tribe{{items.id}}">
-    				{{items.name}}
+    				<a href="" class="linkTribe" ng-click="openTopic(items.id)"><h3>{{items.name}}</h3></a>
+    				<span><strong>Iniciado por: </strong></span><span>{{items.creator.name}} {{items.creator.lastname}}</span>
+    			</li>
+    			<li class="col-md-2 text-center margin_label">
+    				<span class="label_audience label_audiencie_blue">20</span>
+    			</li>
+    			<li class="col-md-2 text-center margin_label">
+    				<span class="label_audience label_audiencie_green">150</span>
+    			</li>
+    			<li class="col-md-3 text-center margin_label">
+    				<span><strong>Fecha de creación:</strong></span>
+    				<br>
+    				<span>{{items.date_created}}</span>
     			</li>
     		</ul>
     	</li>
     </ul>
+
+    <!-- modal Topic -->
+
+    <div class="modalTopic" ng-show="open"> 
+    	<span>Foro <i class="fa fa-caret-right"></i> Topic</span>
+    	<a href="" ng-click="openTopic()" class="closeModalTopic pull-right"><strong>X</strong></a>
+    	<div class="clearfix"></div>
+    	<h4 class="well descriptionBgTopics">{{topicDescription}}</h4>
+    	<ul class="list-group">
+    		<li class="list-group-item forum-header">
+    			<ul class="row list-unstyled">
+    				<li class="col-md-3">
+    					<strong><i class="fa fa-user"></i> Autor</strong>
+    				</li>
+    				<li class="col-md-9 text-center">
+    					<strong><i class="fa fa-comment-o"></i> Comentario</strong>
+    				</li>
+    			</ul>
+    		</li>
+    		<li class="list-group-item">
+    			<ul class="row list-unstyled">
+    				<li class="col-md-3">
+    					Carlos
+    				</li>
+    				<li class="col-md-9 text-center">
+    					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Deserunt reprehenderit delectus eaque nulla a deleniti alias cupiditate molestiae, maiores beatae maxime odit, libero quae ipsam magnam nihil sapiente voluptatum eligendi.</p>
+    				</li>
+    			</ul>
+    		</li>
+    		<li class="list-group-item">
+    			<ul class="row list-unstyled">
+    				<li class="col-md-3">
+    					Pedro
+    				</li>
+    				<li class="col-md-9 text-center">
+    					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Deserunt reprehenderit delectus eaque nulla a deleniti alias cupiditate molestiae, maiores beatae maxime odit, libero quae ipsam magnam nihil sapiente voluptatum eligendi.</p>
+    				</li>
+    			</ul>
+    		</li>
+    	</ul>
+
+    </div>
+
 </div>
+
+
