--- a/views/simpleCourse/tab4.html
+++ b/views/simpleCourse/tab4.html
@@ -30,15 +30,15 @@
     				<span><strong>Iniciado por: </strong></span><span>{{tribesDetails.creator.name}} {{tribesDetails.creator.lastname}}</span>
     			</li>
     			<li class="col-md-2 text-center margin_label">
-    				<span class="label_audience label_audiencie_blue">20</span>
+    				<div class="label_audience label_audiencie_blue">{{tribesDetails.topics[$index].users_commented}}</div>
     			</li>
     			<li class="col-md-2 text-center margin_label">
-    				<span class="label_audience label_audiencie_green">150</span>
+    				<div class="label_audience label_audiencie_green">{{tribesDetails.topics[$index].comments}}</div>
     			</li>
     			<li class="col-md-3 text-center margin_label">
     				<span><strong>Fecha de creación:</strong></span>
     				<br>
-    				<span>{{tribesDetails.date_created}}</span>
+    				<span>{{tribesDetails.topics[$index].date_created}}</span>
     			</li>
     		</ul>
     	</li>
@@ -71,10 +71,11 @@
     			<ul class="row list-unstyled">
     				<li class="col-md-3 text-center profileAutor">
     					<p>{{comments.user.name}} {{comments.user.lastname}}</p>
-    					<img src="images/avatarDefault.png" class="img-responsive img-circle col-md-6 col-md-offset-3" alt="avatar">
+    					<img ng-if="comments.user.avatar != ''" ng-src="{{comments.user.avatar}}" class="img-responsive img-circle col-md-6 col-md-offset-3" alt="avatar">
+    					<img ng-if="comments.user.avatar == ''" src="images/avatarDefault.png" class="img-responsive img-circle col-md-6 col-md-offset-3" alt="avatar">
     				</li>
     				<li class="col-md-9 profileComment"> 
-    					<div class="dateComment"><i class="fa fa-clock-o"></i> <span>hace {{comments.date_modified}}</span></div>
+    					<div class="dateComment"><i class="fa fa-clock-o"></i> <span>{{comments.date_modified}}</span></div>
     					<hr>
     					<p ng-bind-html="parseHtml(comments.comment)"></p>
     				</li>
@@ -95,7 +96,7 @@
     					<textarea id="message-box" class="form-control" rows="3" placeholder="Escribe un comentario" ng-model="post"></textarea>
     				</div>
     			</div>
-    			<button type="submit" class="btn btn-default pull-right" ng-click="addPost(post)">Enviar Comentario</button>
+    			<button type="submit" class="btn btn-default pull-right" ng-click="addPost(post,idTopic)">Enviar Comentario</button>
     		</form>
     	</div>
 
